@@ -3,7 +3,6 @@ sudo: false
 language: perl
 perl:
   - '5.20'
-  - '5.10'
 branches:
   only:
     - master
